<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AboutUsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/grid_3x"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/radius_10"
        app:cardElevation="@dimen/grid_2x">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btnCloseAboutUs"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="@dimen/grid_3x"
                android:rotation="-45"
                android:src="@drawable/ic_baseline_add_circle_outline_24"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                app:tint="@color/text_gray" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none"
                app:layout_constraintBottom_toTopOf="@+id/tvMeetTheTeam"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/grid_3x"
                        app:cardCornerRadius="@dimen/radius_10"
                        app:cardElevation="@dimen/grid_2x">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/greyToDarkgrey"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-medium"
                                android:gravity="center"
                                android:padding="@dimen/grid_2x"
                                android:text="@string/AboutUsAbout"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/ui_blue" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/grid_3x"
                                android:gravity="center"
                                android:lineSpacingExtra="6dp"
                                android:padding="@dimen/grid_2x"
                                android:text="@string/AboutUsAboutDetail"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/grid_3x"
                        app:cardCornerRadius="@dimen/radius_10"
                        app:cardElevation="@dimen/grid_2x">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/greyToDarkgrey"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-medium"
                                android:gravity="center"
                                android:padding="@dimen/grid_2x"
                                android:text="@string/AboutUsMission"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/ui_blue" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/grid_3x"
                                android:gravity="center"
                                android:lineSpacingExtra="6dp"
                                android:padding="@dimen/grid_2x"
                                android:text="@string/AboutUsMissionDetail"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/grid_3x"
                        app:cardCornerRadius="@dimen/radius_10"
                        app:cardElevation="@dimen/grid_2x">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/greyToDarkgrey"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-medium"
                                android:gravity="center"
                                android:padding="@dimen/grid_2x"
                                android:text="@string/AboutUsVision"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/ui_blue" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/grid_3x"
                                android:gravity="center"
                                android:lineSpacingExtra="6dp"
                                android:padding="@dimen/grid_2x"
                                android:text="@string/AboutUsVisionDetail"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </ScrollView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_3x"
                android:fontFamily="@font/palanquin_semibold"
                android:text="About Us"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/text_gray"
                app:layout_constraintEnd_toStartOf="@+id/btnCloseAboutUs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tvMeetTheTeam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_3x"
                android:background="@drawable/rounded_tv_background"
                android:backgroundTint="@color/ui_blue"
                android:gravity="center"
                android:textAllCaps="false"
                android:text="Meet The Team"
                android:textColor="@color/white_ui"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
